--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -299,7 +299,7 @@ button.custom-prev-slide:hover, button.custom-next-slide:hover {
 
 <div class="donation-container">
     <div class="left-column">
-        <img src="{% static 'images/IVOCdonate3.jpg' %}" alt="IVOC Donate Visual" class="donate-image">
+        <img src="{% static 'images/IVOCdonate.jpg' %}" alt="IVOC Donate Visual" class="donate-image">
         <img src="{% static 'images/IVOCDonateIMG.png' %}" alt="Impact Visual" class="donate-image">
     </div>
 
@@ -368,13 +368,13 @@ button.custom-prev-slide:hover, button.custom-next-slide:hover {
 <div class="custom-image-gallery-slideshow">
     <div class="custom-slide-container">
         <div class="custom-slide">
-            <img src="{% static 'images/grant1.jpg' %}" alt="IVOC Visual 1" class="custom-gallery-image">
+            <img src="{% static 'images/grant1.jpg' %}" alt="IVOC Visual 1" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
         <div class="custom-slide">
             <img src="{% static 'images/grant2.jpg' %}" alt="IVOC Visual 2" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
         <div class="custom-slide">
-            <img src="{% static 'images/grant3.jpg' %}" alt="IVOC Visual 3" class="custom-gallery-image">
+            <img src="{% static 'images/grant3.jpg' %}" alt="IVOC Visual 3" class="custom-gallery-image" style="width: 70%; height: auto;">
         </div>
         <div class="custom-slide">
             <img src="{% static 'images/grant4.png' %}" alt="IVOC Visual 4" class="custom-gallery-image" style="width: 70%; height: auto;">
